<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA5"
        android:layout_margin="10sp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@color/design_default_color_secondary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/willname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="30sp"></TextView>

            <TextView
                android:id="@+id/willdesc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/desc"
                android:textSize="20sp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="3"
                style="?android:attr/buttonBarButtonStyle"
                >

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/locbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:background="@color/colorAccent"
                    android:text="@string/loc"
                    android:textColor="@android:color/black" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/embtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:text="@string/Email"
                    android:textColor="@android:color/black" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/phbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:text="@string/Phone"
                    android:textColor="@android:color/black" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>