<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#00BFA5"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@color/design_default_color_secondary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgup"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10sp"></ImageView>

            <TextView
                android:id="@+id/nameup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="30sp"></TextView>

            <TextView
                android:id="@+id/desc1up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/desc"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/linkurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:text="@string/link"
                android:textSize="20sp"></TextView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>